--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>B5 Flip Gradient Elements</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css" />
+	<title>Flip Gradient Elements</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
 <div class="content">
@@ -12,7 +12,7 @@
 			<div class="select">
 				<div>
 					<div class="select-title">
-						<img src="../paper-plane.svg" alt="">
+						<img src="paper-plane.svg" alt="">
 						<p class="select-title">basic</p>
 					</div>
 					<ul>
@@ -45,7 +45,7 @@
 			<div class="select">
 			<div>
 				<div class="select-title">
-					<img src="../plane.svg" alt="">
+					<img src="plane.svg" alt="">
 					<p class="select-title">plus</p>
 				</div>
 				<ul>
@@ -78,7 +78,7 @@
 			<div class="select">
 				<div>
 					<div class="select-title">
-						<img src="../rocket.svg" alt="">
+						<img src="rocket.svg" alt="">
 						<p class="select-title">pro</p>
 					</div>
 					<ul>
@@ -108,7 +108,6 @@
 					<div class="select-button">select</div>
 				</div>
 			</div>
-
 	</div>
 </div>
 </body>
